exports[`Story 01 renders correctly an empty main story 1`] = `
<div>
  <div
    className="rootStory"
    style={
      Object {
        "backgroundColor": "aliceblue",
        "color": "black",
        "marginBottom": 10,
        "padding": 2,
      }
    }>
    <div
      className="rootStoryTitle"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "marginBottom": 5,
          "textAlign": "center",
        }
      }>
      <span
        onClick={[Function]}
        style={
          Object {
            "fontWeight": 900,
            "letterSpacing": 3,
          }
        }>
        CLIENT
         
        <span
          style={
            Object {
              "color": "darkgrey",
            }
          }>
          [
          0
          ]
        </span>
      </span>
    </div>
  </div>
  <div
    className="rootStory"
    style={
      Object {
        "backgroundColor": "rgb(214, 236, 255)",
        "color": "black",
        "marginBottom": 10,
        "padding": 2,
      }
    }>
    <div
      className="rootStoryTitle"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "marginBottom": 5,
          "textAlign": "center",
        }
      }>
      <span
        onClick={[Function]}
        style={
          Object {
            "fontWeight": 900,
            "letterSpacing": 3,
          }
        }>
        SERVER
         
        <span
          style={
            Object {
              "color": "darkgrey",
            }
          }>
          [
          0
          ]
        </span>
      </span>
    </div>
  </div>
</div>
------------HTML PREVIEW---------------
<div>
  <div
    class="rootStory"
    style="background-color:aliceblue;color:black;margin-bottom:10px;padding:2px;"
  >
    <div
      class="rootStoryTitle"
      style="cursor:pointer;margin-bottom:5px;text-align:center;"
    >
      <span style="font-weight:900;letter-spacing:3px;">
        CLIENT
         
        <span style="color:darkgrey;">
          [
          0
          ]
        </span>
      </span>
    </div>
  </div>
  <div
    class="rootStory"
    style="background-color:rgb(214, 236, 255);color:black;margin-bottom:10px;padding:2px;"
  >
    <div
      class="rootStoryTitle"
      style="cursor:pointer;margin-bottom:5px;text-align:center;"
    >
      <span style="font-weight:900;letter-spacing:3px;">
        SERVER
         
        <span style="color:darkgrey;">
          [
          0
          ]
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Story 02 renders correctly server and client records (root level) 1`] = `
<div>
  <div
    className="rootStory"
    style={
      Object {
        "backgroundColor": "aliceblue",
        "color": "black",
        "marginBottom": 10,
        "padding": 2,
      }
    }>
    <div
      className="rootStoryTitle"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "marginBottom": 5,
          "textAlign": "center",
        }
      }>
      <span
        onClick={[Function]}
        style={
          Object {
            "fontWeight": 900,
            "letterSpacing": 3,
          }
        }>
        CLIENT
         
        <span
          style={
            Object {
              "color": "darkgrey",
            }
          }>
          [
          0
          ]
        </span>
      </span>
    </div>
    <div
      className="log allowUserSelect fadeIn"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "backgroundColor": "aliceblue",
          "color": "black",
          "fontFamily": "Menlo, Consolas, monospace",
          "fontWeight": undefined,
          "overflowX": "hidden",
          "textOverflow": "ellipsis",
          "whiteSpace": "pre",
        }
      }>
      <span
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "display": "inline",
            "fontStyle": undefined,
          }
        }
        title={undefined}>
        1970-01-01 01:00:00.000  
      </span>
      <span>
                            
      </span>
      <span
        onClick={undefined}
        style={
          Object {
            "fontWeight": "bold",
          }
        }>
        INFO  
      </span>
      <div
        style={
          Object {
            "display": "inline-block",
            "width": 0,
          }
        } />
      <span
        style={
          Object {
            "cursor": "pointer",
            "display": "inline-block",
            "paddingLeft": 10,
            "width": 30,
          }
        } />
      <span
        onClick={undefined}
        style={Object {}}>
        msg 1
      </span>
    </div>
    <div
      className="log allowUserSelect fadeIn"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "backgroundColor": "aliceblue",
          "color": "black",
          "fontFamily": "Menlo, Consolas, monospace",
          "fontWeight": undefined,
          "overflowX": "hidden",
          "textOverflow": "ellipsis",
          "whiteSpace": "pre",
        }
      }>
      <span
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "display": "inline",
            "fontStyle": undefined,
          }
        }
        title={undefined}>
        1970-01-01 01:00:00.000  
      </span>
      <span>
                            
      </span>
      <span
        onClick={undefined}
        style={
          Object {
            "fontWeight": "bold",
          }
        }>
        INFO  
      </span>
      <div
        style={
          Object {
            "display": "inline-block",
            "width": 0,
          }
        } />
      <span
        style={
          Object {
            "cursor": "pointer",
            "display": "inline-block",
            "paddingLeft": 10,
            "width": 30,
          }
        } />
      <span
        onClick={undefined}
        style={
          Object {
            "color": "#ff6600",
          }
        }>
        msg 2
      </span>
    </div>
  </div>
  <div
    className="rootStory"
    style={
      Object {
        "backgroundColor": "rgb(214, 236, 255)",
        "color": "black",
        "marginBottom": 10,
        "padding": 2,
      }
    }>
    <div
      className="rootStoryTitle"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "marginBottom": 5,
          "textAlign": "center",
        }
      }>
      <span
        onClick={[Function]}
        style={
          Object {
            "fontWeight": 900,
            "letterSpacing": 3,
          }
        }>
        SERVER
         
        <span
          style={
            Object {
              "color": "darkgrey",
            }
          }>
          [
          0
          ]
        </span>
      </span>
    </div>
  </div>
</div>
------------HTML PREVIEW---------------
<div>
  <div
    class="rootStory"
    style="background-color:aliceblue;color:black;margin-bottom:10px;padding:2px;"
  >
    <div
      class="rootStoryTitle"
      style="cursor:pointer;margin-bottom:5px;text-align:center;"
    >
      <span style="font-weight:900;letter-spacing:3px;">
        CLIENT
         
        <span style="color:darkgrey;">
          [
          0
          ]
        </span>
      </span>
    </div>
    <div
      class="log allowUserSelect fadeIn"
      style="background-color:aliceblue;color:black;font-family:Menlo, Consolas, monospace;overflow-x:hidden;text-overflow:ellipsis;white-space:pre;"
    ><span style="cursor:pointer;display:inline;">1970-01-01 01:00:00.000  </span><span>                    </span><span style="font-weight:bold;">INFO  </span><div style="display:inline-block;width:0;"></div><span style="cursor:pointer;display:inline-block;padding-left:10px;width:30px;"></span><span style="">msg 1</span></div>
    <div
      class="log allowUserSelect fadeIn"
      style="background-color:aliceblue;color:black;font-family:Menlo, Consolas, monospace;overflow-x:hidden;text-overflow:ellipsis;white-space:pre;"
    ><span style="cursor:pointer;display:inline;">1970-01-01 01:00:00.000  </span><span>                    </span><span style="font-weight:bold;">INFO  </span><div style="display:inline-block;width:0;"></div><span style="cursor:pointer;display:inline-block;padding-left:10px;width:30px;"></span><span style="color:#ff6600;">msg 2</span></div>
  </div>
  <div
    class="rootStory"
    style="background-color:rgb(214, 236, 255);color:black;margin-bottom:10px;padding:2px;"
  >
    <div
      class="rootStoryTitle"
      style="cursor:pointer;margin-bottom:5px;text-align:center;"
    >
      <span style="font-weight:900;letter-spacing:3px;">
        SERVER
         
        <span style="color:darkgrey;">
          [
          0
          ]
        </span>
      </span>
    </div>
  </div>
</div>
`;
